# aiogram_template

./: .deepsource.toml  .gitignore  README.md  bot.ini.exapmle  bot.py  pyproject.toml  requirements.txt
systemd/: yourbotname.service.example
tgbot/: config.py
tgbot/filters/: reply_kb.py  role.py
tgbot/handlers/: admin.py  user.py
tgbot/keyboards/: inline.py  reply.py
tgbot/middlewares/: db.py  global_timeout.py  throtling.py  translate.py
tgbot/misc/: broadcast.py  states.py  utils.py
tgbot/models/: models.py  user.py  users.py
tgbot/services/: database.py
tgbot/translations/: texts.yml
